# plover-word-suggestion

./: README.md  setup.cfg
plover_word_suggestion/: __init__.py  library.py
