[metadata]
name = plover_word_suggestion
version = 0.1.0
author = user202729
description = Suggest words for strokes not in the dictionary.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover-word-suggestion
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
	#plover-textarea>=0.0.0
packages = plover_word_suggestion

[options.entry_points]
plover.extension =
	plover_word_suggestion = plover_word_suggestion:Main
